POI API (#18)
* POI API Interface

* POI API initial setup

* Update POI interface for adding new suggestion

* Added suggest new POI function to POI rest handler

* Updated POI get functions

* Initial POI suggetion data class

* Updated swagger file to reflect suggest POI function

* Initial POI custom error file

* Made methods private

* BaseAPIError class inital commit

* Added poi suggestion schema and endpoint

* Added to_dict function to poi class

* Editing poi abstract class

* Added custom POI errors

* Added POI suggestion and implemented error handling

* POI suggestion class to_dict implemented

* Fixed error codes and exception handling

* Fixed returns

* Test files for poi and poi_suggestion

* Added unit test for poi and poi_service

* Fixed error handling

* Changed _to_dict to to_dict and bug fixes

* Unit test cases for POI API

* Removed poi_api.py

* Removed error jsonify

* Removed run comment on test cases

* Fixed exception handling (resolved pr comments)
