# swagger.yml
@@ -37,6 +37,17 @@ components:
           type: "object"
         type:
           type: "string"
+    POI_suggestion:
+      type: "object"
+      required:
+        - suggestion_name
+      properties:
+        suggestion_name:
+          type: "string"
+        notes:
+          type: "string"
+        submitted_by:
+          type: "string"
   parameters:
     poi_id:
       name: "poi_id"
@@ -56,7 +67,7 @@ paths:
   # POI API endpoints
   /places/list:
     get:
-      x-openapi-router-controller: app.poi_api.poi.POI
+      x-openapi-router-controller: app.poi_api.poi_rest_handler
       operationId: get_all_POI
       tags:
         - POI
@@ -72,7 +83,7 @@ paths:
                   $ref: '#/components/schemas/POI'
   /places/list/{poi_id}:
     get:
-      x-openapi-router-controller: app.poi_api.poi.POI
+      x-openapi-router-controller: app.poi_api.poi_rest_handler
       operationId: get_POI
       tags:
         - POI
@@ -82,6 +93,46 @@ paths:
       responses:
         "200":
           description: "Successfully read the POI"
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/POI'
+        "404":
+          description: "POI with specified id name not found"
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/POI'
+  /places/suggest:
+    post:
+      x-openapi-router-controller: app.poi_api.poi_rest_handler
+      operationId: suggest_new_POI
+      tags:
+        - POI
+      summary: "Suggest a new POI"
+      requestBody:
+          description: "POI suggestion to create"
+          required: True
+          content:
+            application/json:
+              schema:
+                x-body-name: "poi_suggestion"
+                $ref: "#/components/schemas/POI_suggestion"
+      responses:
+        "200":
+          description: "Successfully read the POI"
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/POI'
+        "400":
+          description: "Invalid POI submission"
           content:
             application/json:
               schema:
